--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-  <string name="app_name">Ambient Learning</string>
-  <string name="title_activity_main">Ambient Learning</string>
-  <string name="package_name">io.ionic.starter</string>
-  <string name="custom_url_scheme">io.ionic.starter</string>
-  <string name="ionic_app_id">19312bb4</string>
-  <string name="ionic_channel_name">Production</string>
-  <string name="ionic_update_method">background</string>
-  <string name="ionic_max_versions">2</string>
-  <string name="ionic_min_background_duration">30</string>
-  <string name="ionic_update_api">https://api.ionicjs.com</string>
+    <string name="app_name">Ambient Learning</string>
+    <string name="title_activity_main">Ambient Learning</string>
+    <string name="package_name">com.etc.ambientlearning</string>
+    <string name="custom_url_scheme">com.etc.ambientlearning</string>
+    <string name="ionic_app_id">19312bb4</string>
+    <string name="ionic_channel_name">Production</string>
+    <string name="ionic_update_method">auto</string>
+    <string name="ionic_max_versions" >2</string>
+    <string name="ionic_update_api">https://api.ionicjs.com</string>
+    <string name="ionic_min_background_duration">30</string>
 </resources>
